; ModuleID = '/home/carl/AnghaBench/kphp-kdb/news/extr_news-data.c_do_delete_user_comment.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/news/extr_news-data.c_do_delete_user_comment.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lev_news_user_comment_hide = type { i32, i32, i32 }

@NOTIFY_MODE = common dso_local global i32 0, align 4
@LEV_NEWS_HIDEUSERITEM = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @do_delete_user_comment(i32 %0, i32 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca %struct.lev_news_user_comment_hide*, align 8
  store i32 %0, i32* %7, align 4
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  %13 = load i32, i32* @NOTIFY_MODE, align 4
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %21

15:                                               ; preds = %5
  %16 = load i32, i32* %8, align 4
  %17 = load i32, i32* %9, align 4
  %18 = load i32, i32* %10, align 4
  %19 = call i32 @check_obj(i32 %16, i32 %17, i32 %18)
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %22, label %21

21:                                               ; preds = %15, %5
  store i32 -1, i32* %6, align 4
  br label %44

22:                                               ; preds = %15
  %23 = load i64, i64* @LEV_NEWS_HIDEUSERITEM, align 8
  %24 = load i32, i32* %8, align 4
  %25 = sext i32 %24 to i64
  %26 = add nsw i64 %23, %25
  %27 = load i32, i32* %9, align 4
  %28 = call %struct.lev_news_user_comment_hide* @alloc_log_event(i64 %26, i32 20, i32 %27)
  store %struct.lev_news_user_comment_hide* %28, %struct.lev_news_user_comment_hide** %12, align 8
  %29 = load i32, i32* %10, align 4
  %30 = load %struct.lev_news_user_comment_hide*, %struct.lev_news_user_comment_hide** %12, align 8
  %31 = getelementptr inbounds %struct.lev_news_user_comment_hide, %struct.lev_news_user_comment_hide* %30, i32 0, i32 0
  store i32 %29, i32* %31, align 4
  %32 = load i32, i32* %11, align 4
  %33 = load %struct.lev_news_user_comment_hide*, %struct.lev_news_user_comment_hide** %12, align 8
  %34 = getelementptr inbounds %struct.lev_news_user_comment_hide, %struct.lev_news_user_comment_hide* %33, i32 0, i32 1
  store i32 %32, i32* %34, align 4
  %35 = load i32, i32* %7, align 4
  %36 = load %struct.lev_news_user_comment_hide*, %struct.lev_news_user_comment_hide** %12, align 8
  %37 = getelementptr inbounds %struct.lev_news_user_comment_hide, %struct.lev_news_user_comment_hide* %36, i32 0, i32 2
  store i32 %35, i32* %37, align 4
  %38 = load i32, i32* %7, align 4
  %39 = load i32, i32* %8, align 4
  %40 = load i32, i32* %9, align 4
  %41 = load i32, i32* %10, align 4
  %42 = load i32, i32* %11, align 4
  %43 = call i32 @show_hide_user_notify(i32 %38, i32 %39, i32 %40, i32 %41, i32 %42, i32 0)
  store i32 %43, i32* %6, align 4
  br label %44

44:                                               ; preds = %22, %21
  %45 = load i32, i32* %6, align 4
  ret i32 %45
}

declare dso_local i32 @check_obj(i32, i32, i32) #1

declare dso_local %struct.lev_news_user_comment_hide* @alloc_log_event(i64, i32, i32) #1

declare dso_local i32 @show_hide_user_notify(i32, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
